--- a/index.html
+++ b/index.html
@@ -610,9 +610,9 @@
         <h3>SSO by Cause</h3>
         <div id="causeCheckboxes"></div>
         <div class="footer">
+          <button id="playHistoryBtnMobile" class="play-history-btn" style="display: none;">Play SSO History</button>
           <hr style="border: none; height: 1px; background: linear-gradient(to right, #002855, #0056b3); width: 100%;" />
-          Drought Data source: U.S. Drought Monitor
-          <button id="playHistoryBtnMobile" class="play-history-btn" style="display: none;">Play History</button>
+			Drought Data source: U.S. Drought Monitor		  
         </div>
       </div>
     </details>
