--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
         <div class="footer">
           <hr style="border: none; height: 1px; background: linear-gradient(to right, #002855, #0056b3); width: 100%;" />
           Drought Data source: U.S. Drought Monitor
-          <button id="playHistoryBtnDesktop" class="play-history-btn" style="display: none;">Play History</button>
+          <button id="playHistoryBtnDesktop" class="play-history-btn" style="display: none;">Play SSO History</button>
         </div>
       </div>
     </div>
